# paper-zxr

./: .gitignore  1_preprocessing.py  README.md  analysis_images.py  analysis_results.xlsx  main.py  pyproject.toml  qc_results.csv  zxr.ipynb
0_reference/: config.yaml  example_usage.py  image_qc_preprocessing.py  kimi.md  preprocessing.ipynb  readme.md  run_qc_pipeline.py
1_preprocessing/: config.yaml  image_qc_preprocessing.py  kimi.md  readme.md  run_qc_pipeline.py
libs/preprocessing/: 1_validate_file.py  validate_images.py
paper/: 1_preprocessing.ipynb  validate_images.py
paper/1_machine_learning/: 1_preprocessing.ipynb  2_feature_extract.ipynb  3_model_construct.ipynb  4_evaluate.ipynb  5_appliance.ipynb
paper/1_machine_learning/.ipynb_checkpoints/: 1_preprocessing-checkpoint.ipynb
paper/libs/preprocessing/: check_background.py  check_blur.py  check_brightness.py  check_bubble.py  check_clump.py  check_coverage.py  check_defocus.py  check_filename.py  check_info.py  check_media.py  check_scratch.py
