[project]
name = "paper-zxr"
version = "0.1.0"
description = "zxr's paper"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.5",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "tqdm>=4.67.3",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
